Solving E001 and more

--- a/roadto_V2/ecoSys_v1.3.ipynb
+++ b/roadto_V2/ecoSys_v1.3.ipynb
@@ -2,27 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iniciando supervivencia en tamaño Medio (20x20)\n",
-      "Ronda 0: ¡El jugador se ha reproducido en (15, 6)!\n",
-      "Ronda 0: ¡Reproducción entre un hostil y un aliado en (13, 7)!\n",
-      "Ronda 1: ¡Conflicto entre un hostil y un aliado en (12, 8)!\n",
-      "Ronda 4: ¡Reproducción entre dos aliados en (7, 9)!\n",
-      "Ronda 5: ¡Conflicto entre un hostil y un aliado en (8, 10)!\n",
-      "Ronda 5: ¡Reproducción entre un hostil y un aliado en (1, 15)!\n",
-      "Ronda 5: ¡Conflicto entre un hostil y un aliado en (14, 8)!\n",
-      "Ronda 6: ¡Conflicto entre un hostil y un aliado en (13, 7)!\n",
-      "Ronda 6: ¡Conflicto entre un hostil y un aliado en (1, 14)!\n",
-      "Ronda 7: ¡Reproducción entre dos aliados en (8, 7)!\n",
-      "Ronda 7: ¡Un hijo ha crecido y se ha convertido en adulto en (15, 5)!\n",
-      "Ronda 13: ¡El jugador se ha reproducido en (8, 8)!\n",
-      "Ronda 13: ¡Reproducción entre un hostil y un aliado en (10, 14)!\n"
+      "pygame 2.6.1 (SDL 2.28.4, Python 3.12.3)\n",
+      "Hello from the pygame community. https://www.pygame.org/contribute.html\n",
+      "Iniciando simulación en tamaño Grande (25x25) con 5 individuos y 40 iteraciones\n",
+      "Ronda 33: ¡Un individuo ha muerto de viejo en (19, 2)!\n",
+      "Ronda 33: ¡Un individuo ha muerto de viejo en (14, 0)!\n",
+      "Ronda 33: ¡Un individuo ha muerto de viejo en (13, 4)!\n",
+      "Ronda 33: ¡Un individuo ha muerto de viejo en (7, 8)!\n",
+      "Ronda 33: ¡Un individuo ha muerto de viejo en (23, 5)!\n",
+      "No quedan individuos vivos. Fin de la simulación\n",
+      "No quedan individuos vivos. Fin de la simulación\n"
      ]
     }
    ],
@@ -80,7 +76,7 @@
     "        for event in pygame.event.get():\n",
     "            if event.type == pygame.QUIT:\n",
     "                pygame.quit()\n",
-    "                exit()\n",
+    "                return None  # Devuelve None si el usuario cierra la ventana\n",
     "            if event.type == pygame.KEYDOWN:\n",
     "                if event.key == pygame.K_RETURN:\n",
     "                    pygame.quit()\n",
@@ -89,6 +85,11 @@
     "                    selected_mode = (selected_mode - 1) % len(modes)\n",
     "                elif event.key == pygame.K_DOWN:\n",
     "                    selected_mode = (selected_mode + 1) % len(modes)\n",
+    "\n",
+    "    # Si se sale del bucle porque el usuario cerró la ventana, terminamos el programa\n",
+    "    pygame.quit()\n",
+    "    return None\n",
+    "\n",
     "\n",
     "def input_screen_supervivencia():\n",
     "    \"\"\"Muestra la pantalla para seleccionar el tamaño y la dificultad en modo Supervivencia.\"\"\"\n",
@@ -134,7 +135,7 @@
     "            for event in pygame.event.get():\n",
     "                if event.type == pygame.QUIT:\n",
     "                    pygame.quit()\n",
-    "                    exit()\n",
+    "                    return None  # Evita errores en Jupyter al cerrar la ventana\n",
     "                if event.type == pygame.KEYDOWN:\n",
     "                    if event.key == pygame.K_RETURN:\n",
     "                        if selection_size_or_diff:\n",
@@ -162,71 +163,61 @@
     "    pygame.display.set_caption(\"Configuración de la Simulación\")\n",
     "    font = pygame.font.Font(None, 24)\n",
     "    \n",
-    "    # Opciones de tamaño\n",
     "    sizes = [\"Pequeño (15x15)\", \"Medio (20x20)\", \"Grande (25x25)\"]\n",
     "    selected_size = 0\n",
-    "    \n",
-    "    # Inicializamos las cajas de entrada (dos: \"Individuos\" e \"Iteraciones\")\n",
     "    input_boxes = [\"\", \"\"]  # [Individuos, Iteraciones]\n",
-    "    selected_box = 0  # Establecemos que la caja seleccionada inicialmente sea la primera (índice 0)\n",
-    "    \n",
-    "    # Añadimos variables para controlar la visibilidad del cursor de texto ('|')\n",
+    "    selected_box = 0  \n",
+    "\n",
     "    cursor_visible = True\n",
     "    cursor_timer = pygame.time.get_ticks()  \n",
-    "    \n",
-    "    # Variable para alternar entre selección de tamaño y cajas de entrada\n",
-    "    selecting_size = True  # True para seleccionar tamaño, False para ingresar valores\n",
-    "    \n",
-    "    # Bucle principal de la pantalla de entrada\n",
+    "    selecting_size = True  \n",
+    "\n",
     "    running = True\n",
     "    while running:\n",
     "        screen.fill(COLORS['WHITE'])\n",
     "        title = font.render(\"Selecciona el tamaño y los valores:\", True, COLORS['BLACK'])\n",
     "        screen.blit(title, (50, 20))\n",
     "        \n",
-    "        # Dibujar las opciones de tamaño solo si estamos seleccionando el tamaño\n",
     "        if selecting_size:\n",
     "            for i, size in enumerate(sizes):\n",
     "                color = COLORS['BLUE'] if i == selected_size else COLORS['BLACK']\n",
     "                size_text = font.render(f\"Tamaño {i+1}: {size}\", True, color)\n",
     "                screen.blit(size_text, (50, 60 + i * 30))\n",
     "        else:\n",
-    "            # Dibujar las cajas de entrada si no se está seleccionando el tamaño\n",
     "            labels = [\"Individuos: \", \"Iteraciones: \"]\n",
     "            for i, label in enumerate(labels):\n",
     "                text = input_boxes[i] + (\"|\" if cursor_visible and i == selected_box else \"\")\n",
     "                txt_surface = font.render(label + text, True, COLORS['BLACK'])\n",
-    "                screen.blit(txt_surface, (50, 60 + i * 50))  # Colocamos el texto en su lugar\n",
+    "                screen.blit(txt_surface, (50, 60 + i * 50)) \n",
     "        \n",
     "        pygame.display.flip()\n",
     "\n",
-    "        # Si han pasado 500 ms desde el último parpadeo del cursor, lo cambiamos de visibilidad\n",
     "        if pygame.time.get_ticks() - cursor_timer > 500:\n",
     "            cursor_visible = not cursor_visible\n",
     "            cursor_timer = pygame.time.get_ticks()\n",
     "        \n",
-    "        # Comprobamos los eventos del teclado y el ratón\n",
     "        for event in pygame.event.get():\n",
     "            if event.type == pygame.QUIT:\n",
-    "                pygame.quit()   # Cerrar Pygame si el usuario cierra la ventana\n",
-    "                exit()\n",
+    "                pygame.quit()\n",
+    "                return None  # Evita errores en Jupyter al cerrar la ventana\n",
+    "\n",
     "            if event.type == pygame.KEYDOWN:\n",
-    "                if event.key == pygame.K_RETURN:  # Si presiona ENTER...\n",
+    "                if event.key == pygame.K_RETURN:\n",
     "                    if selecting_size:\n",
-    "                        selecting_size = False  # Cambiar a cajas de entrada\n",
+    "                        selecting_size = False  \n",
     "                    else:\n",
-    "                        if selected_box == 1 and input_boxes[0] and input_boxes[1]:   # Si estamos en la 2da caja (Iteraciones) y ambas tienen texto\n",
-    "                            pygame.quit()   # Se cierra la pantalla\n",
-    "                            return sizes[selected_size][:-8], int(input_boxes[0]), int(input_boxes[1])   # Devuelve el tamaño, individuos e iteraciones\n",
-    "                        # Si no, cambiamos la selección entre las dos cajas\n",
+    "                        if selected_box == 1 and input_boxes[0] and input_boxes[1]:   \n",
+    "                            pygame.quit()   \n",
+    "                            return sizes[selected_size][:-8], int(input_boxes[0]), int(input_boxes[1])   \n",
     "                        selected_box = (selected_box + 1) % 2\n",
-    "                elif event.key == pygame.K_BACKSPACE:  # Si presionamos backspace\n",
-    "                    if not selecting_size:\n",
-    "                        input_boxes[selected_box] = input_boxes[selected_box][:-1]  # Eliminamos el último carácter de la caja seleccionada\n",
-    "                elif event.unicode.isdigit():  # Si se presiona un dígito\n",
-    "                    if not selecting_size:\n",
-    "                        input_boxes[selected_box] += event.unicode   # Añadimos el dígito a la caja de texto seleccionada\n",
-    "                elif selecting_size:  # Si estamos seleccionando el tamaño\n",
+    "\n",
+    "                elif event.key == pygame.K_BACKSPACE and not selecting_size:\n",
+    "                    input_boxes[selected_box] = input_boxes[selected_box][:-1]  \n",
+    "\n",
+    "                elif event.unicode.isdigit() and not selecting_size:\n",
+    "                    input_boxes[selected_box] += event.unicode  \n",
+    "\n",
+    "                elif selecting_size:\n",
     "                    if event.key == pygame.K_UP:\n",
     "                        selected_size = (selected_size - 1) % len(sizes)\n",
     "                    elif event.key == pygame.K_DOWN:\n",
@@ -360,7 +351,7 @@
     "        if ind != jugador:\n",
     "            ind.move(grid_width, grid_height)\n",
     "\n",
-    "def procesar_interacciones(jugador, individuos, estadistica, interacciones, contador_prints, iteracion, modo_testing=False):\n",
+    "def procesar_interacciones_supervivencia(jugador, individuos, estadistica, interacciones, contador_prints, iteracion, modo_testing=False):\n",
     "    \"\"\"\n",
     "    Procesa las interacciones entre los individuos y actualiza las estadísticas.\n",
     "    :param iteracion: Número de la ronda actual.\n",
@@ -570,8 +561,12 @@
     "            contador_prints += 1\n",
     "            interacciones[(ind.x, ind.y)] = 'CRECIMIENTO'\n",
     "\n",
-    "        # Incrementar la edad del individuo\n",
-    "        ind.age += 1\n",
+    "        # Verificar si el individuo muere de vejez\n",
+    "        if ind.age >= 33:\n",
+    "            print(f\"Ronda {iteracion}: ¡Un individuo ha muerto de viejo en {(ind.x, ind.y)}!\")\n",
+    "            contador_prints += 1\n",
+    "            estadistica.sumar_muerte(1)  # Registrar la muerte en las estadísticas\n",
+    "            interacciones[(ind.x, ind.y)] = 'MUERTE'  # Marcar la celda como muerte\n",
     "\n",
     "    # Filtrar individuos muertos por envejecimiento\n",
     "    individuos[:] = [ind for ind in nuevos_individuos if ind.age < 33]\n",
@@ -582,6 +577,7 @@
     "        return False, contador_prints  # La simulación termina\n",
     "\n",
     "    return True, contador_prints  # La simulación continúa\n",
+    "\n",
     "\n",
     "def dibujar_simulacion(screen, jugador, individuos, estadistica, iteracion, interacciones, config, poder=None, modo=\"Supervivencia\", modo_testing=False):\n",
     "    \"\"\"Dibuja la simulación en la pantalla.\"\"\"\n",
@@ -724,7 +720,7 @@
     "                if movimiento != [0, 0]:\n",
     "                    actualizar_posiciones(jugador, individuos, movimiento, config.grid_width, config.grid_height)\n",
     "                    interacciones.clear()\n",
-    "                    running, contador_prints = procesar_interacciones(jugador, individuos, estadistica, interacciones, contador_prints, iteracion, modo_testing)\n",
+    "                    running, contador_prints = procesar_interacciones_supervivencia(jugador, individuos, estadistica, interacciones, contador_prints, iteracion, modo_testing)\n",
     "\n",
     "                    # Regenerar población (si corresponde)\n",
     "                    regenerar_poblacion(individuos, config.grid_width, config.grid_height, individuos_iniciales, config.max_individuos, iteracion)\n",
@@ -836,21 +832,33 @@
     "\n",
     "\n",
     "def main():\n",
+    "    modo = pantalla_inicio()  \n",
     "\n",
-    "    modo = pantalla_inicio()\n",
-    "\n",
+    "    if modo is None:\n",
+    "        print(\"Saliendo del programa...\")\n",
+    "        return  \n",
+    "    \n",
     "    if modo == \"Supervivencia\":\n",
-    "        size_election, dificultad = input_screen_supervivencia()\n",
+    "        options = input_screen_supervivencia()\n",
+    "        if options is None:\n",
+    "            print(\"Supervivencia cancelada.\")\n",
+    "            return  # Evita errores si el usuario cierra la ventana\n",
+    "        size_election, dificultad = options\n",
     "        config = clase.Config(size_election.lower())\n",
-    "\n",
     "        print(f\"Iniciando supervivencia en tamaño {size_election} ({config.grid_width}x{config.grid_height})\")\n",
-    "        modo_supervivencia(config, dificultad, modo_testing=True)  # Modo Supervivencia. ACTIVACIÓN MODO TESTING (true)\n",
+    "        modo_supervivencia(config, dificultad, modo_testing=True)  # Modo Supervivencia\n",
     "\n",
-    "    elif modo == \"Simulacion\":\n",
-    "        size_election, num_individuos, num_iteraciones = input_screen_simulacion()\n",
-    "        config = clase.Config(size_election.lower())  # Usar el tamaño seleccionado\n",
+    "    if modo == \"Simulacion\":\n",
+    "        options = input_screen_simulacion()\n",
+    "        if options is None:\n",
+    "            print(\"Simulación cancelada.\")\n",
+    "            return  # Evita errores si el usuario cierra la ventana\n",
+    "        size_election, num_individuos, num_iteraciones = options\n",
+    "        config = clase.Config(size_election.lower())\n",
     "        print(f\"Iniciando simulación en tamaño {size_election} ({config.grid_width}x{config.grid_height}) con {num_individuos} individuos y {num_iteraciones} iteraciones\")\n",
-    "        modo_simulacion(size_election, num_individuos, num_iteraciones, modo_testing=True)  # Modo Simulación\n",
+    "        modo_simulacion(size_election, num_individuos, num_iteraciones, modo_testing=False)  \n",
+    "\n",
+    "    pygame.quit()\n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    main()"
